<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        app:layout_constraintTop_toTopOf="@+id/img_item_photo"
        tools:text="@string/text_resep" />

    <TextView
        android:id="@+id/tv_item_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/text_times"
        android:textColor="@color/metallic_seaweed"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
        app:layout_constraintStart_toStartOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/text_difficulty"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_username"
        app:layout_constraintStart_toStartOf="@+id/tv_item_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

</androidx.constraintlayout.widget.ConstraintLayout>