<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:padding="16dp">

                <ImageView
                    android:id="@+id/img_detail_user"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/detail_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_detail_user"
                    app:layout_constraintTop_toTopOf="@+id/img_detail_user" />

                <TextView
                    android:id="@+id/tv_detail_followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/followers"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

                <TextView
                    android:id="@+id/text_followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/followers"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_detail_followers"
                    app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
                    app:layout_constraintTop_toTopOf="@+id/tv_detail_followers" />

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/following"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_followers"
                    app:layout_constraintTop_toBottomOf="@+id/text_followers" />

                <TextView
                    android:id="@+id/text_following"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/following"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following"
                    app:layout_constraintEnd_toEndOf="@+id/text_followers"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_following"
                    app:layout_constraintTop_toTopOf="@+id/tv_detail_following" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_location"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/text_following"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_following"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_following" />

                <View
                    android:id="@+id/diver_1"
                    style="@style/Divider.Horizontal"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

                <TextView
                    android:id="@+id/text_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/company"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/diver_1"
                    app:layout_constraintTop_toBottomOf="@+id/diver_1" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/company"
                    app:layout_constraintBottom_toBottomOf="@+id/text_company"
                    app:layout_constraintEnd_toEndOf="@+id/diver_1"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/text_company"
                    app:layout_constraintTop_toTopOf="@+id/text_company" />

                <View
                    android:id="@+id/diver_2"
                    style="@style/Divider.Horizontal"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_company" />

                <TextView
                    android:id="@+id/text_repositories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/repositories"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/diver_2"
                    app:layout_constraintTop_toBottomOf="@+id/diver_2" />

                <TextView
                    android:id="@+id/tv_detail_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/repositories"
                    app:layout_constraintBottom_toBottomOf="@+id/text_repositories"
                    app:layout_constraintEnd_toEndOf="@+id/diver_2"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/text_repositories"
                    app:layout_constraintTop_toTopOf="@+id/text_repositories" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>